[gd_scene load_steps=11 format=3 uid="uid://dl7jukvt3tfgc"]

[ext_resource type="Theme" uid="uid://b6nhidr6cyvdi" path="res://gui.tres" id="1_jf511"]
[ext_resource type="Script" uid="uid://cb53w2kp3hfpw" path="res://gui.gd" id="1_u77ya"]
[ext_resource type="Script" uid="uid://cw4v0bqj62hst" path="res://copy_seed_button.gd" id="2_6lon5"]
[ext_resource type="Script" uid="uid://5jvxlkmq8g3o" path="res://meter_meter.gd" id="4_cor1f"]
[ext_resource type="Script" uid="uid://6yilyg3gle4h" path="res://debug_things.gd" id="7_0wv8u"]
[ext_resource type="Script" uid="uid://bqor2xu8384rt" path="res://fullscreen_button.gd" id="7_p8208"]
[ext_resource type="Texture2D" uid="uid://djrpe2qme8btk" path="res://pause.png" id="8_67jta"]
[ext_resource type="Script" uid="uid://dgig3odqwmwul" path="res://quit_button.gd" id="8_axmix"]

[sub_resource type="LabelSettings" id="LabelSettings_0wv8u"]
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_jf511"]
font_size = 46
shadow_size = 11
shadow_color = Color(0, 0, 0, 0.29411766)
shadow_offset = Vector2(1, 5.22)

[node name="GUI" type="CanvasLayer"]

[node name="VersionLabel" type="Label" parent="."]
offset_left = 1071.0
offset_top = 627.0
offset_right = 1146.0
offset_bottom = 642.0
theme = ExtResource("1_jf511")
text = "v0.4.0-proto"
label_settings = SubResource("LabelSettings_0wv8u")

[node name="MeterMeter" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.92100006
anchor_right = 0.5
anchor_bottom = 0.92100006
offset_left = -229.0
offset_top = -26.808044
offset_right = 228.0
offset_bottom = 29.191956
theme = ExtResource("1_jf511")
text = "0 m"
label_settings = SubResource("LabelSettings_jf511")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_cor1f")

[node name="PauseMenu" type="Control" parent="."]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u77ya")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.21568628)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -79.0
offset_right = 91.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jf511")
text = "Continue"

[node name="NewLevelButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jf511")
text = "New Level"

[node name="CopySeedButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jf511")
text = "Copy Current Seed"
script = ExtResource("2_6lon5")

[node name="LoadSeedButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jf511")
text = "Paste Seed"

[node name="FullscreenButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jf511")
text = "Toggle Fullscreen"
script = ExtResource("7_p8208")

[node name="QuitButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jf511")
text = "Quit"
script = ExtResource("8_axmix")

[node name="DebugThings" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("7_0wv8u")

[node name="PauseButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -54.0
offset_right = 57.0
offset_bottom = -16.0
grow_vertical = 0
icon = ExtResource("8_67jta")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="PauseMenu/VBoxContainer/ContinueButton" to="PauseMenu" method="_on_continue_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/NewLevelButton" to="PauseMenu" method="_on_new_level_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/LoadSeedButton" to="PauseMenu" method="_on_load_seed_button_pressed"]
[connection signal="pressed" from="PauseButton" to="PauseMenu" method="_on_pause_button_pressed"]
